force-app/main/default/objects/StockPriceHistory__c/StockPriceHistory__c.object-meta.xml
<CustomObject>



    <!-- generated by the cli -->

    <pluralLabel>Stock Price Histories</pluralLabel>
    <fullName>StockPriceHistory__c</fullName>
    <description>Historical price data for tracked stocks</description>
    <nameField>
        <label>Price History Record Name</label>
        <type>AutoNumber</type>
        <displayFormat>SPH-{000000}</displayFormat>
    </nameField>
    <!-- <sharingModel>ReadWrite</sharingModel> -->
    <sharingModel>ControlledByParent</sharingModel>
    <label>Stock Price History</label>

    

</CustomObject>