force-app/main/default/objects/StockPriceHistory__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <type>Currency</type>
    <precision>10</precision>
    <scale>4</scale>
    <inlineHelpText>Historical stock price captured from market data APIs. Prices include 4 decimal places to ensure accuracy for financial calculations and trend analysis.</inlineHelpText>
    <required>true</required>
    <description>The stock price at a specific point in time, stored with 4 decimal places for maximum precision</description>
    <label>Price</label>
</CustomField>