force-app/main/default/objects/StockPriceHistory__c/fields/PriceTimestamp__c.field-meta.xml
<CustomField>
    <fullName>PriceTimestamp__c</fullName>
    <type>DateTime</type>
    <inlineHelpText>Timestamp showing when this price was captured. Used for chronological sorting and time-based analysis. Times are typically in market timezone (EST/EDT).</inlineHelpText>
    <required>true</required>
    <description>The exact date and time when this price was recorded from the market data source</description>
    <label>Price Timestamp</label>
</CustomField>