force-app/main/default/objects/StockPriceHistory__c/fields/TrackedStock__c.field-meta.xml
<CustomField>

    <fullName>TrackedStock__c</fullName>
    <type>MasterDetail</type>
    <inlineHelpText>Links this price record to a specific tracked stock.</inlineHelpText>
    <description>The stock symbol record that this price history entry belongs to.</description>
    <label>Tracked Stock</label>
    <referenceTo>TrackedStock__c</referenceTo>
    <relationshipLabel>Stock Price Histories</relationshipLabel>
    <relationshipName>StockPriceHistories</relationshipName>
</CustomField>