force-app/main/default/objects/StockPriceHistory__c/fields/TradingVolume__c.field-meta.xml
<CustomField>
    <fullName>TradingVolume__c</fullName>
    <type>Number</type>
    <precision>15</precision>
    <scale>0</scale>
    <inlineHelpText>Trading volume indicates market activity and liquidity. Higher volume often correlates with price reliability. Leave blank if volume data is unavailable from the data source.</inlineHelpText>
    <description>Number of shares traded during the time period when this price was recorded</description>
    <label>Trading Volume</label>
</CustomField>